--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:apps": "turbo run dev --filter=@schoolmaster/api --filter=@schoolmaster/web",
     "dev": "npm run dev:apps",
     "db:up": "docker compose -f infra/docker/docker-compose.dev.yml up -d postgres",
-    "db:migrate": "dotenv -e .env -- npm run --workspace @schoolmaster/api prisma:deploy",
+    "db:migrate": "dotenv -e .env -- node scripts/wait-for-db.js && dotenv -e .env -- npm run --workspace @schoolmaster/api prisma:deploy",
     "db:seed": "dotenv -e .env -- npm run --workspace @schoolmaster/api seed",
     "dev:bootstrap": "bash ./scripts/dev-bootstrap.sh",
     "build": "turbo run build",
@@ -23,5 +23,8 @@
     "dotenv-cli": "^11.0.0",
     "turbo": "^2.0.3",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "npx": "^10.2.2"
   }
 }
