--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,13 +4,11 @@
   "private": true,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "lint": "eslint 'src/**/*.ts'",
-    "dev": "tsc -p tsconfig.json --watch"
+    "dev": "tsc -w -p tsconfig.json",
+    "lint": "echo \"no lint\""
   },
-  "dependencies": {},
   "devDependencies": {
     "typescript": "^5.4.5"
   }
