--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint 'src/**/*.ts'",
     "prisma:migrate": "prisma migrate dev",
     "prisma:generate": "prisma generate",
-    "prisma:deploy": "prisma migrate deploy --schema prisma/schema.prisma --skip-generate",
+    "prisma:deploy": "prisma migrate deploy --schema prisma/schema.prisma",
     "seed": "node ../../scripts/wait-for-db.js && TS_NODE_TRANSPILE_ONLY=1 node -r ts-node/register -r tsconfig-paths/register ../../scripts/seed.ts"
   },
   "prisma": {
