--- a/infra/docker/Dockerfile.api
+++ b/infra/docker/Dockerfile.api
@@ -3,7 +3,8 @@ WORKDIR /app
 COPY package.json package-lock.json* turbo.json tsconfig.base.json ./
 COPY packages ./packages
 COPY apps/api ./apps/api
-RUN npm install --omit=dev && npm install --prefix apps/api --omit=dev
+ENV NODE_ENV=production
+RUN npm ci && npm ci --prefix apps/api
 RUN npm run --workspace @schoolmaster/api build
 EXPOSE 3001
 CMD ["node", "apps/api/dist/main.js"]
