fixed a horrenous issue with the config that caused very elongated compilation times

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -30,8 +30,11 @@
   },
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
+    "app/**/*",
+    "components/**/*",
+    "lib/**/*",
+    "pages/**/*",
+    "providers/**/*",
     ".next/types/**/*.ts"
   ],
   "exclude": [
