--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "esbuild": "0.27.1"
+    "esbuild": "0.27.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18"
   }
 }
