--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "main": "dist/main.js",
   "scripts": {
-    "dev": "TS_NODE_TRANSPILE_ONLY=1 ts-node-dev --respawn --transpile-only --require tsconfig-paths/register --ignore-watch node_modules --ignore-watch dist --ignore-watch ../web --ignore-watch .turbo --ignore-watch ../web/.next src/main.ts",
+    "dev": "node --watch -r ./swc-register.js src/main.ts",
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/main.js",
     "lint": "eslint 'src/**/*.ts'",
     "prisma:migrate": "prisma migrate dev",
     "prisma:generate": "prisma generate",
     "prisma:deploy": "prisma migrate deploy --schema prisma/schema.prisma",
-    "seed": "node ../../scripts/wait-for-db.js && npx prisma generate --schema prisma/schema.prisma && TS_NODE_TRANSPILE_ONLY=1 node -r ts-node/register -r tsconfig-paths/register ../../scripts/seed.ts"
+    "seed": "node ../../scripts/wait-for-db.js && npx prisma generate --schema prisma/schema.prisma && TS_NODE_TRANSPILE_ONLY=1 node -r ts-node/register -r tsconfig-paths/register ../../scripts/seed.ts",
+    "test": "node --test --require ./test/setup.js test/**/*.test.js"
   },
   "prisma": {
     "seed": "ts-node ../../scripts/seed.ts"
@@ -38,6 +39,8 @@
   },
   "devDependencies": {
     "@schoolmaster/config": "0.1.0",
+    "@swc/core": "file:../../swc-core-1.7.26.tgz",
+    "@swc/register": "file:../../swc-register-0.1.10.tgz",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
